--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
       "@types/sprintf-js": "1.1.1",
       "@types/underscore": "1.8.9",
       "chai": "4.2.0",
+      "dotenv-webpack": "1.7.0",
       "grunt": "1.0.3",
       "grunt-cli": "1.3.1",
       "grunt-contrib-clean": "2.0.0",
@@ -55,7 +56,9 @@
       "webpack-cli": "3.2.0"
    },
    "dependencies": {
+      "underscore": "1.9.1",
       "vue": "2.5.17",
-      "vue-property-decorator": "7.3.0"
+      "vue-property-decorator": "7.3.0",
+      "vue-router": "3.0.2"
    }
 }
